@@ -1,121 +1,161 @@
 # Block Breaker Game
-## Compilation Instructions:
-- Provide a clear, step-by-step guide on how to compile the code to produce the application. Include any dependencies or special settings required.
-  
-- src, pom, gitignore
-- 
+## Compilation Instructions with IntelliJ IDEA, JavaFX 21.01, and Amazon Corretto JDK 19.0.2
+
+Follow these steps to compile and run your Java application using IntelliJ IDEA, JavaFX 21.01, and Amazon Corretto JDK 19.0.2:
+
+1. **Install IntelliJ IDEA:**
+  - If not already installed, download and install IntelliJ IDEA from the [official website](https://www.jetbrains.com/idea/download/).
+  - Follow the installation instructions for your operating system.
+  - This project was created in Intellij Student Edition, but any Intellij version should work.
+
+2. **Clone Your GitHub Repository in IntelliJ IDEA:**
+  - Open IntelliJ IDEA.
+  - Click on "Check out from Version Control" on the welcome screen, or go to "File" > "New" > "Project from Version Control" > "Git."
+  - Enter ```java https://github.com/Chhat2206/COMP2042_CW_hfycs2.git``` and follow the prompts to clone it.
+
+3. **Set Up Project Structure:**
+  - Ensure that your Java source code is organized according to the standard Java project structure within your IntelliJ project.
+
+4. **Configure SDK and Libraries:**
+  - Configure Amazon Corretto JDK 19.0.2 as your project's JDK:
+    - Go to "File" > "Project Structure."
+    - Under "Project," select your "Project SDK" and set it to Amazon Corretto JDK 19.0.2.
+    - Ensure that the "Project language level" is set appropriately (e.g., Java 8 or higher).
+
+5. **Add JavaFX Library:**
+  - Add the JavaFX library to your project:
+    - Go to "File" > "Project Structure."
+    - Under "Project Settings," select "Libraries" and click the "+" icon to add a new library.
+    - Choose "Java" and navigate to the `lib` directory within your JavaFX SDK 21.01 installation directory.
+    - Click "OK" to add the JavaFX library.
+
+5.5. (Optional) **Create a Run Configuration:**
+  - Set up a run configuration for your Java application:
+    - Right-click on your main application class (e.g., `Main.java`) in the project explorer.
+    - Select "Create 'Main'" from the context menu (or use the name of your main class).
+    - In the Run Configuration dialog, ensure that the main class is selected correctly.
+    - Under "VM options," add the following to specify the JavaFX module path and modules:
+    ```plaintext
+    --module-path /path/to/javafx-sdk-21.01/lib --add-modules javafx.controls,javafx.fxml
+    ```
+    - Replace `/path/to/javafx-sdk-21.01` with the actual path to your JavaFX SDK 21.01 installation directory.
+
+7. **Compile and Run Your Application:**
+  - Click the "Run" button in IntelliJ IDEA or use the keyboard shortcut (typically Shift + F10) to compile and run your Java application.
+
+Your Java application should now compile and run seamlessly using JavaFX 21.01 and Amazon Corretto JDK 19.0.2 within IntelliJ IDEA. Make any necessary adjustments to match your project structure and requirements.
+
 ## Implemented and Working Properly:
 - List the features that have been successfully implemented and are functioning as expected. Provide a brief description of each.
 
 ## Implemented but Not Working Properly:
-- List any features that have been implemented but are not working correctly. Explain the issues you encountered, and if possible, the steps you took to address them.
+
 
 ## Features Not Implemented:
-- 
+- **Feature**: Pause button
+  - **Issue**: Main menu did pause very smoothly, no need for a dedicated button
 
+- **Feature**: Custom sound menu to tweak every sound in the game
+  - **Issue**: Seems unnecessary when I modified each sound to be pleasing. I all-ready demonstrated the knowledge of modifying sound with one slider. I also could not make the menu look good.
 
-## New Java Classes:
-- Enumerate any new Java classes that you introduced for the assignment. Include a brief description of each class's purpose and its location in the code.
+- **Feature**: Pause Menu Image, fade out of the pause menu, fixing score, custom paddle and ball chosen by the user, custom level difficulty
+  - **Issue**: The features above (and those unmentioned) were implemented but did not fit the theme and style of the game, as such were removed.
+
+## New Java Classes
+In this project, several new Java classes were introduced to enhance the game's functionality. Below is a brief description of each class and its purpose:
+
+### SoundManager
+- **Purpose:** Manages all music and sound effects in the game. It allows other classes to access and control sound effects throughout the game.
+
+### MainMenu
+- **Purpose:** Handles the main menu interface, including the display of menu options and navigation.
+
+### PauseMenu
+- **Purpose:** Manages the pause menu, providing options like resume, settings, or exit when the game is paused.
+
+### GameBoardManager
+- **Purpose:** Controls the game board logic, including the layout, piece movements, and game state management.
+
+### UIManager
+- **Purpose:** Manages the user interface elements, coordinating between different screens and UI components.
+
+### YouWinScreen
+- **Purpose:** Displays the victory screen when a player wins, showing scores and options for next steps.
 
 ## Modified Java Classes:
 - List the Java classes you modified from the provided code base. Describe the changes you made and explain why these modifications were necessary.
 
 ## Unexpected Problems:
+All issues not mentioned here were uninteresting to describe. These are the major issues and fixes with unique solutions.
 ### Collision Detection
 - **Issue**: Collision detection is problematic.
-  - **Solution**: Partially resolved by incorporating the ball radius into the 'checkHitToBlock' function, allowing blocks to detect and disappear upon collision with the ball.
+  - **Solution**: Partially resolved by incorporating the ball radius into the 'checkHitToBlock' function, allowing blocks to detect and disappear upon collision with the ball. From there, add many collision checks and redundancy to account for any change in ball movement. ballRadius is added to all relevant items that collide with the ball to ensure smooth gameplay.
 
-### Pause Menu Addition
-- **Issue**: Adding a pause menu led to access modifier changes and problems with automatic closing when loading the game.
-  - **Solution**: Changed access modifiers from private to protected for access in the same package. Menu should automatically close when loading the game.
-
-### Loading Game Issues
-- **Issue**: Loading the game caused various issues like block changes, increased ball velocity, and level progression problems. Reopening the game after minimizing the pause menu displayed only the pause menu.
-  - **Solution**: Investigate and fix the issues related to loading game and pause menu behavior.
-
-### Button Commands Loop
-- **Issue**: Running commands on buttons sometimes triggered a feedback loop with repeated 'esc' key actions. Moving code from the main menu to functions caused cascading issues.
-  - **Solution**: Analyze and address the feedback loop issue and refactor code to prevent cascading problems.
-
-### Window Size Limitation
-- **Issue**: Attempting to limit the window size caused problems with the pause menu and sound effects.
-  - **Solution**: Investigate the issue with window size limitation and resolve the problems with the pause menu and sound effects.
+### Movement Game Issues
+- **Issue**: The ball, paddle, and all gui items with velocity would randomly disappear or have strange properties.
+  - **Solution**: Rewrite every function to connect it to threads instead of being interdependent to other non-related states.
 
 ### Persistent Pause Menu
 - **Issue**: The pause menu remained in place when the game screen was moved.
-  - **Solution**: Resolved by adjusting the position of the pause menu based on the game screen's position.
-
-### Game Engine After Life
-- **Issue**: The game engine ran after every life, causing problems with the pause menu.
-  - **Solution**: Investigate and fix the issue related to the game engine running after a life is lost, potentially due to concurrent access to an array.
-
-### Block Collision
-- **Issue**: Block collision was completely broken and required a rewrite of the handleBlockCollisions function.
-  - **Solution**: Analyze the block collision issue and rewrite the function to ensure proper collision handling.
+  - **Solution**: Resolved by adjusting the position of the pause menu based on the game screen's position, and utilizing the game scene as the primary scene.
 
 ### Score Freeze
 - **Issue**: The score sometimes froze in place, and falling objects gained unexpected physics.
-  - **Solution**: Investigate and resolve the issues related to score freezing and unexpected physics in falling objects.
-
-### Ball Disappearance
-- **Issue**: The ball occasionally disappeared during gameplay.
-  - **Solution**: Implement additional checks and fixes to prevent the ball from disappearing unexpectedly.
+  - **Solution**: Rewrite all physics related to score, and added multiple checks in order to account for all variables.
 
 ### Fading Out
-- **Issue**: Fading out didn't work as expected, and there were issues with the sound menu.
-  - **Solution**: Review and address the problems related to fading out and sound menu behavior.
+- **Issue**: Fading out didn't work as expected while in the pause and sound menu.
+  - **Solution**: The animation for opening the sound menu was colliding with the new animation for closing the sound menu. This issue was fixed by setting a fixed duration on the animation time.
 
-### Background Function Bug
-- **Issue**: Loading the game caused issues with the background function.
-  - **Solution**: Investigate and fix the background function issue, which may involve checking why it increases by 1.
+### Difficulty Launching Main Menu
+- **Issue**: The main menu would open after every level up in game
+  - **Solution**: A new thread is being created for every element continuously. Removing new threads from being constantly created and only utilizing the start function for running the Main Menu once fixed the issue.
 
-### Visual Glitches
-- **Issue**: Visual glitches like afterimages for the paddle and objects stuck in the air were observed.
-  - **Solution**: Multiple problems present themselves. The threads clog up the memory in this game very quickly because they are created every time a level is created and an object is initialized. 
-  - Large image files seems to have a hard time rendering in the game. Clear up the memory and lower the image quality.
+### Index Out Of Bounds
+- **Issue**: Randomly got index out of bounds error
+  - **Solution**: Related to the blocks and arraylist, the board setup has been customized with new levels and the function for block detection was completely rewritten.
 
+### Phasing Through Blocks
+- **Issue**: Creating custom levels meant all blocks past the row level increment equal to the row of blocks are visible but have no collision detection.
+  - **Solution**: 
+  ```java
+    if (ballPosY + BALL_RADIUS >= Block.getPaddingTop() && ballPosY - BALL_RADIUS <= (Block.getHeight() * (level + 1)) + Block.getPaddingTop()) {
+    ``` 
+  was included in the code, meaning that all blocks past that level would be counted as blocks but only be visible with no borders. Removing and rewriting this line broke the collision detection, requiring a complete rewrite of the collision detection functions.
+
+### Invalid URL
+- **Issue**: Java URL syntax varies from one function to another without consistency.
+  - **Solution**: Added redundancy links in case the primary syntax fails.
 
 ## Credits
-
-
-### Sound Effects
+The items that are not listed below were hand created by me.
 
 ### Images
-#### Background Images
-- [backgroundImage-4](https://wallpapercave.com/wp/wp1933991.jpg)
-- [backgroundImage-5](https://wallpapercave.com/wp/wp7495828.jpg)
-- [backgroundImage-6](https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F1249933.jpg&f=1&nofb=1&ipt=e2886b5a3ba670dac4164b8be29b02d4fc81650ca6bd4137412dbe209bfa5679&ipo=images)
-- [backgroundImage-7](https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F1439591.jpg&f=1&nofb=1&ipt=1acbca1f4ba13fdefc9b62e9297e2a5ffd8ac63ca81308b7fc0f0c339e735c34&ipo=images)
-- [backgroundImage-8](https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F1485290.jpg&f=1&nofb=1&ipt=f56910d13f6ae0a854e07282d049446d5b4408a69cdfbffb32e1b0affcb631bd&ipo=images)
-- [backgroundImage-9](https://get.pxhere.com/photo/landscape-tree-water-nature-grass-outdoor-horizon-cloud-plant-sky-field-night-meadow-prairie-countryside-sunlight-lake-atmosphere-land-pond-environment-evening-reflection-crop-scenic-color-peaceful-natural-scenery-calm-serene-blue-rest-colorful-agriculture-moon-season-plain-relaxation-single-stars-nightsky-grassland-lone-beauty-inspiration-amazing-beautiful-scene-natur-reflex-exciting-breathtaking-incredible-grass-family-atmosphere-of-earth-computer-wallpaper-883277.jpg)
-
 #### General Assets
-- [Paddle & General Block Design](https://kenney.nl/assets/shape-characters)
+- [Paddle Design](https://kenney.nl/assets/shape-characters)
 
 ### Sound Effects
 #### Background Music
 - [backgroundMusicSoftPiano](https://pixabay.com/sound-effects/soft-piano-100-bpm-121529/)
-- [backgroundMusicNCS](http://ncs.lnk.to/karmaAT/youtube)
-- [backgroundMusicSoftPiano](https://pixabay.com/sound-effects/8bit-music-for-game-68698/)
 - [backgroundMusicCosmic](https://pixabay.com/sound-effects/spaceship-ambience-with-effects-21420/)
+- [backgroundMusicAnimePiano](https://pixabay.com/sound-effects/the-last-piano-112677/)
+- [backgroundMusicMorningVibes](https://pixabay.com/sound-effects/good-morning-heaven-no-drums-55690/)
 
 #### Menus
-- [menuOpen](https://pixabay.com/sound-effects/game-start-6104/)
+- [mainMenuOpen](https://pixabay.com/sound-effects/game-start-6104/)
+- [pauseMenuOpen](https://pixabay.com/sound-effects/interface-soft-click-131438/)
 
 #### General Sounds
 - [collectPowerup](https://pixabay.com/sound-effects/coin-collect-retro-8-bit-sound-effect-145251/)
 - [buttonClickSound](https://pixabay.com/sound-effects/click-button-app-147358/)
 - [changeBackgroundMusic](https://pixabay.com/sound-effects/tape-cassette-insert-172758/)
 - [muteSoundPauseMenu](https://pixabay.com/sound-effects/click-21156/)
-- [levelUp](https://pixabay.com/sound-effects/game-bonus-144751/)
-- [gameOver](https://pixabay.com/sound-effects/videogame-death-sound-43894/)
+- [levelUp](https://pixabay.com/sound-effects/woosh-low-long01-98755/)
+- [gameOver](https://pixabay.com/sound-effects/power-down-7103/)
 - [winSound](https://pixabay.com/sound-effects/winsquare-6993/)
 - [goldBallPowerUp](https://pixabay.com/sound-effects/collect-5930/)
-- [collectBonus](https://pixabay.com/sound-effects/collectcoin-6075/)
+- [collectBonus](https://pixabay.com/sound-effects/blaster-2-81267/)
 - [ballHitFloor](https://pixabay.com/sound-effects/jazz-bass-open-e-39297/)
 - [paddleBounce](https://pixabay.com/sound-effects/stop-13692/)
-
-???
-- [interface-124464](https://pixabay.com/sound-effects/interface-124464/)
-- [interface-soft-click-131438](https://pixabay.com/sound-effects/interface-soft-click-131438/)
 - [buttonClickSound](https://pixabay.com/sound-effects/click-for-game-menu-131903/)
+- [heartBonus](https://pixabay.com/sound-effects/hospital-monitor-151929/)
